# FPL-Technocrat

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/cli/: run_gameweek_report.py
app/ui/: pipeline_runner.py  report_loader.py  streamlit_app.py  team_of_week.py
data/transcripts/: -PVZrmKY4nU.json  E0bUNSKuGus.json  JOJiqXmN5JQ.json  XEL8WtqQhwM.json  Zg_RWtsZTQw.json  abc123.json
examples/: example_gameweek_input.json
notebooks/: FPL_API_Experimentations.ipynb  experimentations.ipynb  fpl_api.ipynb  fpl_team_gw30.json
runs/gw32/: aggregate_report.json  discovered_videos.json  expert_outputs.json  final_report.json  input_jobs.json  manifest.json  report.md
src/adapters/: __init__.py  storage.py  transcript_api.py  youtube.py
src/agents/: expert_video_agent.py  final_synthesis_agent.py  model_factory.py
src/config/: __init__.py  expert_sources.py
src/orchestrators/: gameweek_orchestrator.py
src/schemas/: aggregate_report.py  expert_analysis.py  final_report.py  orchestration.py  video_job.py
src/services/: __init__.py  aggregation_service.py  disagreement_service.py  expert_analysis_service.py  fpl_service.py  normalization.py  pipeline_service.py  report_formatter_service.py  report_service.py  synthesis_service.py  transcript_ingestion_service.py  transcript_service.py  video_selection_service.py
src/tools/: fpl_api.py
src/utils/: __init__.py  retry.py  text_cleaning.py
tests/adapters/: test_storage.py  test_transcript_api.py  (+1 more)
(+23 files in other folders)
