[project]
name = "fpl-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "openai-agents>=0.13.4",
    "pandas>=3.0.2",
    "pydantic>=2.12.5",
    "uvicorn>=0.42.0",
    "youtube-transcript-api>=1.2.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
